--- a/src/component/card/card.styles.css
+++ b/src/component/card/card.styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: #000000;
-  border: 1px solid #ff5555;
+  border: 1px solid #29c7ac;
   border-radius: 5px;
   padding: 25px;
   cursor: pointer;
